--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,5 @@ edition = "2021"
 [dependencies]
 log = "0.4"
 env_logger = "0.9.0"
+bytes = "1"
 clap = { version = "4.1.4", features = ["derive"] }
