--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,3 +18,7 @@ jobs:
       - uses: actions-rs/cargo@v1
         with:
           command: test
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v3
+
+
