--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,4 +11,4 @@ env_logger = "0.9.0"
 bytes = "1"
 clap = { version = "4.1.4", features = ["derive"] }
 serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
+bincode = "1.3.3"
