--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,5 @@ bytes = "1"
 clap = { version = "4.1.4", features = ["derive"] }
 serde = { version = "1.0", features = ["derive"] }
 bincode = "1.3.3"
+clokwerk = "0.4.0"
+tokio = { version = "1", features = ["full"] }
