--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ serde = { version = "1.0", features = ["derive"] }
 bincode = "1.3.3"
 clokwerk = "0.4.0"
 tokio = { version = "1", features = ["full"] }
+ctrlc = { version = "3.0", features = ["termination"] }
